Issues #1865 (XML cleanup of PipelineMeta)